testing/errors/toolateforpostfix1.a
	a = 3
	b = a	; read a
	a+2 = 3	; -> "too late for postfix"
